--- a/package.json
+++ b/package.json
@@ -8,5 +8,14 @@
     "axios": "^1.1.3",
     "marked": "^4.2.2",
     "node-fetch": "^2.6.7"
-  }
+  },
+  "devDependencies": {
+    "jest": "^29.3.1"
+  },
+  "scripts": {
+    "test": "jest"
+  },
+  "transformIgnorePatterns": [
+    "node_modules/(?!react-markdown/)"
+  ]
 }
