--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "engines": {
     "node": ">=14.x"
   },
+  "bin": {"mdLinks": "cli.js"
+  },
+  
   "dependencies": {
     "axios": "^1.1.3",
     "marked": "^4.2.2",
